--- a/app/globals.css
+++ b/app/globals.css
@@ -60,3 +60,9 @@
   border-radius: 0.75rem;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+.stroke-white {
+  -webkit-text-stroke: 1.5px white;
+}
+.strok-red {
+  -webkit-text-stroke: 1.5px #b30101;
+}
